scroll down dark mode fix

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -82,6 +82,14 @@ body[data-theme="dark"] section .arrow-down {
   color: var(--white);
 }
 
+body[data-theme="dark"] .arrow-down{
+  background-color: #222;
+}
+
+body[data-theme="dark"] .arrow-down > .arrow{
+  background-color: #f5f5f5;
+}
+
 @keyframes glow {
   from {
     text-shadow: 0 0 5px #fff,
